--- a/Website/appsettings.json
+++ b/Website/appsettings.json
@@ -1,5 +1,12 @@
 {
   "ConnectionStrings": {
     "DefaultConnectionString": "User ID=postgres;Password=postgres;Host=localhost;Port=5432;Database=website;Pooling=true"
+  },
+  "SapphireNotes": {
+    "Version": "x.x.x",
+    "ReleaseDate": "dd-MMM-yyyy",
+    "WindowsFileSize": "x MB",
+    "DebianUbuntu64FileSize": "x MB",
+    "DebianUbuntuARMFileSize": "x MB"
   }
 }
