Add Team Sketch project

--- a/Website/appsettings.json
+++ b/Website/appsettings.json
@@ -8,5 +8,12 @@
     "WindowsFileSize": "x MB",
     "DebianUbuntu64FileSize": "x MB",
     "DebianUbuntuARMFileSize": "x MB"
+  },
+  "TeamSketch": {
+    "Version": "x.x.x",
+    "ReleaseDate": "dd-MMM-yyyy",
+    "WindowsFileSize": "x MB",
+    "DebianUbuntu64FileSize": "x MB",
+    "DebianUbuntuARMFileSize": "x MB"
   }
 }
