--- a/Website/Website.fsproj
+++ b/Website/Website.fsproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <AspNetCoreModuleName>AspNetCoreModuleV2</AspNetCoreModuleName>
@@ -7,11 +7,11 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.123" />
-    <PackageReference Include="Giraffe" Version="5.0.0" />
+    <PackageReference Include="Giraffe" Version="6.0.0" />
     <PackageReference Include="Giraffe.ViewEngine" Version="1.4.0" />
-    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.19.0" />
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.20.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
-    <PackageReference Include="Npgsql" Version="6.0.0" />
+    <PackageReference Include="Npgsql" Version="6.0.4" />
     <PackageReference Include="Ply" Version="0.3.*" />
   </ItemGroup>
   <ItemGroup>
@@ -20,7 +20,9 @@
     <Compile Include="Repositories/BlogPostsRepository.fs" />
     <Compile Include="Repositories/BookmarksRepository.fs" />
     <Compile Include="Views/Layout.fs" />
-    <Compile Include="Views/Home.fs" />
+	<Compile Include="Views/Home/Index.fs" />
+	<Compile Include="Views\Home\SapphireNotes.fs" />
+	<Compile Include="Views\Home\TeamSketch.fs" />
     <Compile Include="Views/MyProjects.fs" />
     <Compile Include="Views/Blog.fs" />
     <Compile Include="Views/Bookmarks.fs" />
@@ -33,6 +35,6 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Update="FSharp.Core" Version="6.0.1" />
+    <PackageReference Update="FSharp.Core" Version="6.0.3" />
   </ItemGroup>
 </Project>
