--- a/Website/Website.fsproj
+++ b/Website/Website.fsproj
@@ -8,9 +8,11 @@
 		<PackageReference Include="Dapper" Version="2.1.28" />
 		<PackageReference Include="Giraffe" Version="6.2.0" />
 		<PackageReference Include="Giraffe.ViewEngine" Version="1.4.0" />
-		<PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.21.0" />
+		<PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.22.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
 		<PackageReference Include="Npgsql" Version="8.0.1" />
+		<PackageReference Include="OpenTelemetry.Exporter.Prometheus.AspNetCore" Version="1.7.0-rc.1" />
+		<PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.7.0" />
 		<PackageReference Include="Ply" Version="0.3.*" />
 	</ItemGroup>
 	<ItemGroup>
