Emit custom metric for counting page hits

--- a/Website/Website.fsproj
+++ b/Website/Website.fsproj
@@ -36,6 +36,9 @@
 		</Content>
 	</ItemGroup>
 	<ItemGroup>
+		<ProjectReference Include="..\Metrics\Metrics.csproj" />
+	</ItemGroup>
+	<ItemGroup>
 		<PackageReference Update="FSharp.Core" Version="8.0.101" />
 	</ItemGroup>
 </Project>
