--- a/Website/Website.fsproj
+++ b/Website/Website.fsproj
@@ -1,18 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 	<PropertyGroup>
-		<TargetFramework>net8.0</TargetFramework>
+		<TargetFramework>net9.0</TargetFramework>
 		<AssemblyName>Website</AssemblyName>
 		<EnableDefaultContentItems>false</EnableDefaultContentItems>
 	</PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="Dapper" Version="2.1.35" />
+		<PackageReference Include="Dapper" Version="2.1.66" />
 		<PackageReference Include="Giraffe" Version="7.0.2" />
 		<PackageReference Include="Giraffe.ViewEngine" Version="1.4.0" />
-		<PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.22.0" />
-		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.403" />
-		<PackageReference Include="Npgsql" Version="8.0.5" />
-		<PackageReference Include="OpenTelemetry.Exporter.Prometheus.AspNetCore" Version="1.7.0-rc.1" />
-		<PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.10.0" />
+		<PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.23.0" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.3" />
+		<PackageReference Include="Npgsql" Version="9.0.3" />
+		<PackageReference Include="OpenTelemetry.Exporter.Prometheus.AspNetCore" Version="1.11.2-beta.1" />
+		<PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.11.2" />
 		<PackageReference Include="Ply" Version="0.3.*" />
 	</ItemGroup>
 	<ItemGroup>
@@ -41,6 +41,6 @@
 		<ProjectReference Include="..\Metrics\Metrics.csproj" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Update="FSharp.Core" Version="8.0.403" />
+		<PackageReference Update="FSharp.Core" Version="9.0.201" />
 	</ItemGroup>
 </Project>
